--- a/EDDA_ASSIGNMENT1.ipynb
+++ b/EDDA_ASSIGNMENT1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeYYTmaXkuabRHTCC/XWAA",
+      "authorship_tag": "ABX9TyOftBtnfAcawuRkXkfz9EW+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,6 +34,80 @@
       },
       "outputs": [],
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Assignment 1\n",
+        "Due 23 Feb by 23:59 Points 10 Submitting a file upload File types pdf Attempts 0 Allowed attempts 2 Available until 24 Mar at 23:59\n",
+        "Before submitting your report please read Guidelines for assignment reports to submit, the page limit for your report is 15.\n",
+        "Remember that you can use two template files in R-sources and data sets forr making your report.\n",
+        "Throughout this assignment, tests should be performed using a confidence level\n",
+        "=0.05, unless otherwise specified.\n",
+        "Abbreviation CI means confidence interval.\n",
+        "Where appropriate, motivate your answers and check the model assumptions by using relevant diagnostic tools.\n",
+        "Beware that the levels of some factors for some data sets may be coded by numbers.\n",
+        "Command read.csv can be used to upload a csv-file in R, possibly with the option header=TRUE.\n",
+        "\n",
+        "\n",
+        "Exercise 1. Cholesterol  \n",
+        "\n",
+        "A study tested whether cholesterol was reduced after using a certain brand of margarine as part of a low fat low cholesterol diet. The data set cholesterol.txt Download cholesterol.txtcontains information on 18 people using margarine to reduce cholesterol: columns Before and After8weeks contain the cholesterol level (mmol/L) respectively before the diet and after 8 weeks on the diet.\n",
+        "\n",
+        "a) Make some relevant plots of this data set, comment on normality. Investigate whether the columns Before and After8weeks are correlated.\n",
+        "\n",
+        "b) Apply a couple of relevant tests (at least two tests, see Lectures 2–3) to verify whether the diet with low fat margarine has an eﬀect (argue whether the data are paired or not). Is a permutation test applicable? Is the Mann-Whitney test applicable?\n",
+        "\n",
+        "c) Let\n",
+        " be the column After8weeks. Assume\n",
+        " (irrespective of your conclusion in a)) with unknown\n",
+        " and\n",
+        ". Construct a 97%-CI for\n",
+        " based on normality. Next, construct a bootstrap 97%-CI for\n",
+        " and compare it to the above CI.\n",
+        "\n",
+        "d) Using a bootstrap test with test statistic\n",
+        ", determine those\n",
+        " (if there are any) for which  \n",
+        " is not rejected. Can the Kolmogorov-Smirnov test be also applied for this question? If yes, apply it; if not, explain why not.\n",
+        "\n",
+        "e) Using an appropriate test, verify whether the median cholesterol level after 8 weeks of low fat diet is less than 6. Next, design and perform a test to check whether the fraction of the cholesterol levels after 8 weeks of low fat diet less than 4.5 is at most 25%.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Exercise 2. Crops\n",
+        "\n",
+        "In each of the three counties in Iowa, a sample of farms was taken from farms for which landlornd and tenant are related and also from farms for which landlord and tenant are not related. The data is contained in dataset crops.txt Download crops.txt, where column Crops contains the value of crops, column Size the size of farm, column County the county and column Related reflects the fact whether landlord and tenant are related (value “yes”) or not (value “no”). We are primarily interested in investigating the eﬀect of county and relation of landlord and tenant on the crops.\n",
+        "\n",
+        "a) Investigate whether two factors County and Related (and possibly their interaction) influence the crops by performing relevant ANOVA model(s), without taking Size into account. Using a chosen model, estimate the crops for a typical farm in County 3 for which landlord and tenant are not related. Comment on your findings.\n",
+        "\n",
+        "b) Now include also Size as explanatory variable into the analysis (think of ANCOVA). Investigate whether the influence of Size on Crops is similar for all three counties and whether the influence of Size depends on the relation of landlord and tenant of the farm. (Consider at most one (relevant) pairwise interaction per model.) Choose the most appropriate model.\n",
+        "\n",
+        "c) For the resulting model from b), investigate how County, Related and Size influence Crops.\n",
+        "\n",
+        "d) Using the resulting model from b), predict the crops for a farm from County 2 of size 165, with related landlord and tenant. Estimate also the error variance.\n",
+        "\n",
+        "\n",
+        "\n",
+        "Exercise 3. Yield of peas\n",
+        "\n",
+        "The dataset npk is available in the R package MASS. After loading the package MASS, type npk at the prompt to view this dataset. This dataset gives the yield of peas in pounds per plot, based on four factors: in which block the plot was located (labeled 1 through 6), and whether nitrogen (N), phosphate (P) or potassium (K) was applied to the soil (1 = applied, 0 = not applied). There are 24 plots, 4 per block. Since not all 8 (but only 4) combinations of levels of N, P and K are represented for each block, this is incomplete block design, but balanced in the sense that within each block each soil additive is received by two plots. Our main question of interest is whether nitrogen N has an eﬀect on yield.\n",
+        "\n",
+        "a) Present an R-code for the randomization process to distribute soil additives over plots in such a way that each soil additive is received exactly by two plots within each block.\n",
+        "\n",
+        "b) Make a plot to show the average yield per block for the soil treated with nitrogen and for the soil that did not receive nitrogen, and comment.\n",
+        "\n",
+        "c) Conduct a full two-way ANOVA with the response variable yield and the two factors block and N. Was it sensible to include factor block into this model? Can we also apply the Friedman test for this situation?\n",
+        "\n",
+        "d) Investigate other possible models with all the factors combined, restricting to only one (pair-wise) interaction term of factors N, P and K with block in one model (no need to check the model assumptions for all the models). Test for the presence of main eﬀects of N, P and K, possibly taking into account factor block. Give your favorite model and motivate your choice.\n",
+        "\n",
+        "e) For the resulting model from d), investigate how the involved factors influence yield. Which combination of the levels of the factors in the model leads to the largest yield?\n",
+        "\n",
+        "f) Recall the main question of interest. In this light, for the resulting model from d) perform a mixed eﬀects analysis, modeling the block variable as a random eﬀect by using the function lmer. Compare your results to the results found by using the fixed eﬀects model. (You will need to install the R-package lme4, which is not included in the standard distribution of R.)"
+      ],
+      "metadata": {
+        "id": "_8Wic9Et03qQ"
+      }
     },
     {
       "cell_type": "markdown",
